--- a/gitfile2.html
+++ b/gitfile2.html
@@ -6,6 +6,7 @@
     <body>
         <h3>3RD HEADIING</h3>
         <p>COMPLETED ADD PUSH UPDATIONS</p>
+        <p>updation2</p>
     </body>
 </head>
 </html>
